# hashirama_runtime

./: .gitignore  LICENSE  pyproject.toml  readme.md
.github/workflows/: publish.yml
services/homelab-status-page/: .air.toml
services/homelab-status-page/static/: sensor_data
services/homelab-status-page/static/css/: fuck.py  output.css  parallel_chunk_0.txt  parallel_chunk_1.txt  parallel_chunk_10.txt  parallel_chunk_100.txt  parallel_chunk_101.txt  parallel_chunk_102.txt  parallel_chunk_103.txt  parallel_chunk_104.txt  parallel_chunk_105.txt  parallel_chunk_106.txt  parallel_chunk_107.txt  parallel_chunk_108.txt  parallel_chunk_109.txt  parallel_chunk_11.txt  parallel_chunk_110.txt  parallel_chunk_111.txt  parallel_chunk_112.txt  parallel_chunk_113.txt  parallel_chunk_114.txt  parallel_chunk_115.txt  parallel_chunk_116.txt  parallel_chunk_117.txt  parallel_chunk_118.txt  parallel_chunk_119.txt  parallel_chunk_12.txt  parallel_chunk_120.txt  parallel_chunk_121.txt  parallel_chunk_122.txt  parallel_chunk_123.txt  parallel_chunk_124.txt  parallel_chunk_125.txt  parallel_chunk_126.txt  parallel_chunk_127.txt  parallel_chunk_128.txt  parallel_chunk_129.txt  parallel_chunk_13.txt  parallel_chunk_130.txt  parallel_chunk_131.txt  (+248 more)
services/homelab-status-page/static/data/: Interest_list.json  hi.json
services/homelab-status-page/static/js/: demo-picker.js  draggable.v1.js  earcut.esm.js  galaxy.js  index.js  main.js  minecraft.js  periodic.js  rainbow-path.js  rainbow-video-texture.js  shadertoy.js  three-hero.js  three.min.js  tornado.js  visibility-ui.js
(+21 files in other folders)
