[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hashirama-runtime"
version = "0.1.0"
authors = [
  { name="Your Name", email="youremail@example.com" },
]
description = "A runtime utility package for the Hashirama project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/hashirama-runtime"
